tests/baselines/reference/yieldStringLiteral.errors.txt
yieldStringLiteral.ts(2,5): error TS1163: A 'yield' expression is only allowed in a generator body.


==== yieldStringLiteral.ts (1 errors) ====
    function yieldString() {
        yield 'literal';
        ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
    }
    